# agrobot-software

./: .$agro_bot.drawio.bkp  CMakeLists.txt  README.md  agro_bot.drawio  agro_bot.xml  package.xml
config/: agro_bot_sim.yaml  agro_bot_sim_manual.yaml  agro_bot_sim_nav.yaml  cloud_to_scan.yaml  gz_remapings.yaml  image_to_detection.yaml  launch.yaml  local_mapping.yaml  path_controller.yaml  path_mapping.yaml  robot_localization_ekf.yaml  waypoint_follower.yaml
launch/: agro_bot_sim.launch.py  agro_bot_sim_manual.launch.py  agro_bot_sim_nav.launch.py  gz.launch.py  micro_ros_agent.launch.py  robot_localization_ekf.launch.py  rviz.launch.py
model/: agro_bot_v1.0.sdf.xml  agro_bot_v1.0.urdf.xml  agro_bot_v1.1.sdf.xml  agro_bot_v1.1.urdf.xml  agro_bot_v1.2(backup).sdf.xml  agro_bot_v1.2.sdf.xml  agro_bot_v1.3.urdf.xml  agro_bot_v2.0.sdf.xml  agro_bot_v3.0.sdf.xml  agro_bot_v3.1.sdf.xml  agro_bot_v3.2.sdf.xml  agro_bot_v3.2.urdf.xml
model/meshes/: back_left_steering.STL  back_left_wheel.STL  base_link.STL  corn_field_1.STL  front_right_steering.STL
model/meshes/v1/: back_right_steering.STL  back_right_wheel.STL  front_left_steering.STL  front_left_wheel.STL  front_right_wheel.STL
model/meshes/v3/: beam.STL  wheel.STL
rviz/: agro_bot.rviz
scripts/: cloud_to_scan.py  global_mapping.py  hybrid_astar.py  image_to_detection.py  keyboard_controller.py  local_mapping.py  path_controller.py  path_mapping.py  path_planning.py  pathfinding.py  pathfinding2.0.py  pathfinding3.0.py  poly.py  waypoint_follower.py
scripts/gz/: controller.py
scripts/trash/: camera_intrinsics.py  camera_mapping.py  camera_mapping_demo.py  camera_mapping_demo_2.py  demo.py  depth_test.py  global_mapping.py  gns_calc.py  image_to_detection.py  joints.py  local_mapping.py  local_mapping_ros2.py  planning.py  slam_demo.py  slam_demo2.py  tf.py
scripts/trash/common/: NodeNN.py  demonode.py  depth_converter.py  image_to_occupancy.py  main.py  read_other_node_parameters_client.py
scripts/trash/image2occupancy_bridge/: calibration.py  demo_publish_image.py  ros2_bridge.py  stereocular.py
scripts/ui/: buttons.py  indicators.py  style.py  ui.py
scripts/util/: imu.py  parallel.py  utils.py
src/: kinematics.cpp  sim_movement_controller.cpp
